# ep

./: CMakeLists.txt  README.md  pyproject.toml
cmake/: compile_flags.cmake  vcpkg.cmake
core/: CMakeLists.txt  main.cpp
core/include/main_window/: main_window.hpp
core/include/tab_content/: tab_builder.hpp  tab_content.hpp  tab_content_wrapper.hpp
core/source/: CMakeLists.txt
core/source/main_window/: CMakeLists.txt  main_window.cpp
core/source/tab_content/: CMakeLists.txt  tab_builder.cpp  tab_content_wrapper.cpp
gui/: main.qml
scripts/: build.py
scripts/_prepare_deps/: _command.py  _deps.py  _system_id.py
scripts/prepare_deps/: README.md  prepare_deps.py
scripts/prepare_deps/_prepare_deps/: _build_system.py  _system.py
test/: CMakeLists.txt  test_main.cpp
